ansible/roles/build-a-backdoor/files/manifests/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ii-mgmt
  namespace: ii-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ii-prod-mgmt-service
                port:
                  number: 80
